WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202778
[Cocoa] font-family:system-ui on Chinese systems don't get Chinese quote marks
https://bugs.webkit.org/show_bug.cgi?id=202778
Summary
[Cocoa] font-family:system-ui on Chinese systems don't get Chinese quote marks
Myles C. Maxfield
Reported
2019-10-09 18:53:51 PDT
[Cocoa] font-family:system-ui on Chinese systems don't get Chinese quote marks
Attachments
Patch
(3.55 KB, patch)
2019-10-09 18:54 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2019-10-09 18:54:58 PDT
Created
attachment 380600
[details]
Patch
Myles C. Maxfield
Comment 2
2019-10-09 18:55:00 PDT
<
rdar://problem/52594556
>
Simon Fraser (smfr)
Comment 3
2019-10-10 13:51:30 PDT
Comment on
attachment 380600
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380600&action=review
> Source/WebCore/platform/graphics/cocoa/SystemFontDatabaseCoreText.cpp:53 > + if (locale && !CFStringGetLength(locale)) > + locale = nullptr;
Should we detect an empty locale in the calling chain?
Myles C. Maxfield
Comment 4
2019-10-10 13:56:57 PDT
Comment on
attachment 380600
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380600&action=review
>> Source/WebCore/platform/graphics/cocoa/SystemFontDatabaseCoreText.cpp:53 >> + locale = nullptr; > > Should we detect an empty locale in the calling chain?
I actually don't think so, since WebKit is robust enough to handle it. We're just trying to work around a quirk of a platform API.
WebKit Commit Bot
Comment 5
2019-10-10 14:39:02 PDT
Comment on
attachment 380600
[details]
Patch Clearing flags on attachment: 380600 Committed
r250989
: <
https://trac.webkit.org/changeset/250989
>
WebKit Commit Bot
Comment 6
2019-10-10 14:39:04 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7
2019-10-10 17:33:13 PDT
Comment on
attachment 380600
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380600&action=review
>>> Source/WebCore/platform/graphics/cocoa/SystemFontDatabaseCoreText.cpp:53 >>> + locale = nullptr; >> >> Should we detect an empty locale in the calling chain? > > I actually don't think so, since WebKit is robust enough to handle it. We're just trying to work around a quirk of a platform API.
Seems like this needs a "why" comment. I would not have understood that this is working around a quirk of a platform API.
Myles C. Maxfield
Comment 8
2019-10-14 14:00:48 PDT
Committed
r251093
: <
https://trac.webkit.org/changeset/251093
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug