[Cocoa] font-family:system-ui on Chinese systems don't get Chinese quote marks https://bugs.webkit.org/show_bug.cgi?id=202778 <rdar://problem/52594556>

Reviewed by Simon Fraser.

Source/WebCore:

This was caught by fast/text/international/system-language/han-quotes.html,
but we didn't have time to fix it until now.

Test: fast/text/international/system-language/han-quotes.html

* platform/graphics/cocoa/SystemFontDatabaseCoreText.cpp:
(WebCore::SystemFontDatabaseCoreText::createSystemUIFont):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/216279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250989 268f45cc-cd09-0410-ab3c-d52691b4dbfc